// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticLayoutSnap should render correctly with modal 1`] = `
<div
  className="sc-aXZVg bXfOXf"
  data-mocked="Box"
>
  <div
    className="sc-gsFSXq irdOli"
  >
    modalContent
  </div>
  <div
    className="sc-gEvEer iHsuBI"
    data-mocked="Box"
  >
    header
  </div>
  <div
    className="sc-eqUAAy lplIYk"
    data-mocked="Box"
  >
    <div
      className="sc-kAyceB cqfbWr"
      data-mocked="Box"
      isFloating={false}
    >
      leftPanel
    </div>
    <div
      className="sc-fqkvVR hhwHuy"
      data-mocked="Box"
    >
      <div
        className="sc-iGgWBj hzaGuy"
        data-mocked="Box"
      >
        mainContent
      </div>
    </div>
    <div
      className="sc-imWYAI fdOAXN"
      data-mocked="Box"
    >
      rightPanel
    </div>
  </div>
  <div
    className="sc-jXbUNg kirTmv"
    data-mocked="Box"
  >
    footer
  </div>
</div>
`;

exports[`StaticLayoutSnap should render correctly with topBar 1`] = `
<div
  className="sc-aXZVg bXfOXf"
  data-mocked="Box"
>
  <div
    className="sc-gEvEer iHsuBI"
    data-mocked="Box"
  >
    header
  </div>
  <div
    className="sc-eqUAAy lplIYk"
    data-mocked="Box"
  >
    <div
      className="sc-kAyceB cqfbWr"
      data-mocked="Box"
      isFloating={false}
    >
      leftPanel
    </div>
    <div
      className="sc-fqkvVR hhwHuy"
      data-mocked="Box"
    >
      <div
        className="sc-dcJsrY cda-DkI"
        data-mocked="Box"
        padding="xxs"
      >
        topBar
      </div>
      <div
        className="sc-iGgWBj hzaGuy"
        data-mocked="Box"
      >
        mainContent
      </div>
    </div>
    <div
      className="sc-imWYAI fdOAXN"
      data-mocked="Box"
    >
      rightPanel
    </div>
  </div>
  <div
    className="sc-jXbUNg kirTmv"
    data-mocked="Box"
  >
    footer
  </div>
</div>
`;

exports[`StaticLayoutSnap should render correctly without modal 1`] = `
<div
  className="sc-aXZVg bXfOXf"
  data-mocked="Box"
>
  <div
    className="sc-gEvEer iHsuBI"
    data-mocked="Box"
  >
    header
  </div>
  <div
    className="sc-eqUAAy lplIYk"
    data-mocked="Box"
  >
    <div
      className="sc-kAyceB cqfbWr"
      data-mocked="Box"
      isFloating={false}
    >
      leftPanel
    </div>
    <div
      className="sc-fqkvVR hhwHuy"
      data-mocked="Box"
    >
      <div
        className="sc-iGgWBj hzaGuy"
        data-mocked="Box"
      >
        mainContent
      </div>
    </div>
    <div
      className="sc-imWYAI fdOAXN"
      data-mocked="Box"
    >
      rightPanel
    </div>
  </div>
  <div
    className="sc-jXbUNg kirTmv"
    data-mocked="Box"
  >
    footer
  </div>
</div>
`;
